# test_with_pytest

./: .coveragerc  .gitignore  pytest.ini  tox.ini
.github/workflows/: main.yml
ch10/: test_cli.py
ch13/cards_proj/src/cards/: api.py
ch13/cards_proj/tests/cli/: test_done.py
ch15/pytest_skip_slow/: LICENSE  README.md  pyproject.toml  pytest_skip_slow.py
ch3/: test_fixtures.py
ch5/: test_start.py
ch7/: test_list.py
ch9/: single_file.py
ch9/some_code/: test_some_code.py
code/ch4/: test_hello_world.py
exercises/ch10/: test_my_info.py
exercises/ch12/: tox.ini
exercises/ch12/src/: data_not_200.txt  sums.py
exercises/ch12/tests/: test_sums.py
exercises/ch6/: pytest.ini  test_markers.py
